// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/workers/package/npm getPackageUpdates returns array if upgrades found 1`] = `
Array [
  "repositoryUrl",
]
`;

exports[`lib/workers/package/npm getPackageUpdates returns error if no npm scoped dep found 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency. This will block *all* dependencies from being updated due to presence of lock file.",
    "repositoryUrl": null,
    "type": "warning",
  },
]
`;

exports[`lib/workers/package/npm getPackageUpdates returns warning if no npm dep found 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency",
    "repositoryUrl": null,
    "type": "warning",
  },
]
`;

exports[`lib/workers/package/npm getPackageUpdates returns warning if no npm dep found and lock file 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency. This will block *all* dependencies from being updated due to presence of lock file.",
    "repositoryUrl": null,
    "type": "warning",
  },
]
`;

exports[`lib/workers/package/npm getPackageUpdates returns warning if using invalid version 1`] = `
Array [
  Object {
    "depName": "some-dep",
    "message": "Dependency uses tag \\"\`git+ssh://git@github.com/joefraley/eslint-config-meridian.git\`\\" as its version so that will never be changed by Renovate",
    "type": "warning",
  },
]
`;
